--- a/css/style.css
+++ b/css/style.css
@@ -704,10 +704,13 @@ border: 2px solid #fff;
 /* Talk Business
 ---------------------------------*/
 .business-talking{
-	background:url(../img/pw_maze_black_2X.png) top center no-repeat;
-	background-size:cover;
-	padding:60px 0 10px;
-	text-align:center;
+	background: url(../img/pw_maze_black_2X.png) top center no-repeat;
+	background-size: cover;
+	text-align: center;
+	padding-bottom: 60px;
+	padding-left: 0;
+	padding-right: 0;
+	padding-top: 60px;
 }
 .business-talking h2{
 	font-family: 'Montserrat', sans-serif;
@@ -1004,3 +1007,106 @@ border: 2px solid #fff;
   height: 50vh;
   width: 100%;
 }
+css para los videos responsive
+.js-video {
+	height: 0;
+	padding-top: 25px;
+	padding-bottom: 67.5%;
+	margin-bottom: 10px;
+	position: relative;
+	overflow: hidden;
+}
+.js-video.vimeo {
+	padding-top: 0;
+}
+.js-video.widescreen {
+	padding-bottom: 56.34%;
+}
+.js-video embed, .js-video iframe, .js-video object, .js-video video {
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
+
+/* Responsive */
+@media (max-width: 767px) {
+	.js-video {
+		padding-top: 0;
+	}
+}
+
+fin video
+css para galeria
+#galeria{ background: #111;
+img {
+  display: block;
+  max-width: 100%;
+}
+
+.galeria {
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.galeria__item {
+  width: 80%;
+  cursor: pointer;
+}
+@media (min-width:480px) {
+  .galeria__item {
+    width: 48%;
+    margin: 5px;
+  }
+}
+@media (min-width:768px) {
+  .galeria__item {
+    width: 30%;
+  }
+}
+@media (min-width:1024px) {
+  .galeria__item {
+    width: 20%;
+    margin: 15px;
+  }
+}
+
+.modal {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0,0,0,0.7);
+  top: 0;
+  left: 0;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal__img {
+  width: 70%;
+  max-width: 700px;
+}
+
+.modal__boton {
+  width: 50px;
+  height: 50px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 25px;
+  font-family: monospace;
+  line-height: 50px;
+  text-align: center;
+  background: red;
+  border-radius: 50%;
+  cursor: pointer;
+  
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+fin galeria
