--- a/css/style.css
+++ b/css/style.css
@@ -73,11 +73,11 @@ h2{
 }
 h3{
 	font-family: 'Montserrat', sans-serif;
-	color:#222222;
-	font-size:16px;
-	margin:0 0 5px 0;
-	text-transform:uppercase;
-	font-weight:400;
+	color: #888888;
+	font-size: 16px;
+	margin: 0 0 5px 0;
+	text-transform: capitalize;
+	font-weight: 400;
 }
 h6{
 	font-size:16px;
@@ -247,8 +247,8 @@ color: #fff;
 
 .main-sectioninstructor{
 	padding-bottom: 0px;
-	padding-left: 0;
-	padding-right: 0;
+	padding-left: 20px;
+	padding-right: 20px;
 	padding-top: 90px;
 }
 .parrafoinstructor{
