--- a/css/style.css
+++ b/css/style.css
@@ -124,8 +124,11 @@ p{
 	padding-top: 40px;
 }
 .logo{
-	width:130px;
-	margin:0 auto 35px;
+	width: 130px;
+	margin-bottom: 35px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
 }
 .header h1{
 	font-family: 'Montserrat',sans-serif;
