--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,10 @@ body {
 	font-size: 12px;
 	font-weight: normal;
 	color: #888888;
-	margin: 0;
+	margin-bottom: 0;
+	margin-left: 0;
+	margin-right: 0;
+	margin-top: 0;
 }
 h2{
 	font-size:34px;
@@ -110,7 +113,7 @@ p{
 .headerinstructor{
 	text-align: center;
 	background: url(../img/pw_maze_black_2X.png) left top repeat;
-	padding-bottom: 40px;
+	padding-bottom: 15px;
 	padding-left: 0;
 	padding-right: 0;
 	padding-top: 40px;
@@ -252,7 +255,7 @@ color: #fff;
 	padding-bottom: 0px;
 	padding-left: 20px;
 	padding-right: 20px;
-	padding-top: 90px;
+	padding-top: 20px;
 }
 .parrafoinstructor{
 	font-size:14px;
@@ -707,7 +710,7 @@ border: 2px solid #fff;
 /* Talk Business
 ---------------------------------*/
 .business-talking{
-	background: url(../img/pw_maze_black_2X.png) top center no-repeat;
+	background: url(../img/pw_maze_black_2X.png) left top repeat;
 	background-size: cover;
 	text-align: center;
 	padding-bottom: 60px;
@@ -891,8 +894,11 @@ border: 2px solid #fff;
 ---------------------------------*/
 
 .footer{
-	background:url(../img/pw_maze_black_2X.png) left top repeat;
-	padding:35px 0 35px;
+	background: url(../img/pw_maze_black_2X.png) left top repeat;
+	padding-bottom: 35px;
+	padding-left: 0;
+	padding-right: 0;
+	padding-top: 35px;
 }
 .footer-logo{
 	margin:15px auto 35px;
@@ -1119,3 +1125,16 @@ img {
 	padding-bottom: 20px;
 	display: inline-block;
 	}*/
+css martquee
+.bandaazul{
+	padding-bottom: 25px;
+	padding-top: 25px;
+}
+.img{
+	display: inline-block;
+	width: 250px;
+	height: 250px;
+	border-radius: 50%;
+	padding-right: 20px
+}
+fin css marquee
