--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,14 @@ p{
 	padding-right: 0;
 	padding-top: 120px;
 }
+.headerinfo{
+	text-align: center;
+	background: url(../img/pw_maze_black_2X.png) left top repeat;
+	padding-bottom: 120px;
+	padding-left: 0;
+	padding-right: 0;
+	padding-top: 120px;
+}
 
 .headerinstructor{
 	text-align: center;
@@ -1137,3 +1145,14 @@ img {
 
 
 }
+/*video{
+	position:fixed;
+	min-width:100%;
+	min-height:100%;
+	top:50%;
+	left:50%;
+	transform: translateX(-50%) translateY(-50%);
+	z-index:-1;
+	
+	
+	}*/
