--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,7 @@ p{
 .headerinfo{
 	text-align: center;
 	/*background: url(../img/pw_maze_black_2X.png) left top repeat;*/
+	background: #000;
 	padding-bottom: 120px;
 	padding-left: 0;
 	padding-right: 0;
