--- a/css/galeria.css
+++ b/css/galeria.css
@@ -11,8 +11,8 @@ body {
 }*/
 
 #galeria{
-	background: #111;
-	display:inline-block}
+	background: /*#111*/;
+	/*display:inline-block*/}
 	
 
 img {
